--- a/DotnetTemplate.Web/Views/Home/FirstPage.cshtml
+++ b/DotnetTemplate.Web/Views/Home/FirstPage.cshtml
@@ -17,11 +17,11 @@
                 @item
               </span>
             </summary>
-            <div class="nhsuk-details__text">
+            @* <div class="nhsuk-details__text">
               <div class="nhsuk-grid-row">
                 <h5 class="nhsuk-u-margin-bottom-2">Item details</h5>
               </div>
-            </div>
+            </div> *@
           </details>
         </div>
       }
